// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createCompleteThemeDeclarations > renders scoped declarations 1`] = `
".my-scope{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--black-css:black;
}
@media not print {.dark.my-scope{
	--shadow-css:orange;
}}
.my-scope .navigation,.my-scope.navigation{
	--shadow-css:pink;
}
@media not print {.dark.my-scope .navigation,.dark.my-scope.navigation{
	--buttonShadow-css:green;
}}"
`;

exports[`createCompleteThemeDeclarations > wraps selector lists in :is() 1`] = `
":is(.a, .b){
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--black-css:black;
}
@media not print {:is(.a, .b).dark{
	--shadow-css:orange;
}}
:is(.a, .b) .navigation,:is(.a, .b).navigation{
	--shadow-css:pink;
}
@media not print {:is(.a, .b).dark .navigation,:is(.a, .b).dark.navigation{
	--buttonShadow-css:green;
}}"
`;
